--- a/composer.json
+++ b/composer.json
@@ -4,18 +4,18 @@
     "description":"An input detection and response library",
     "keywords":["input", "detect", "response"],
     "homepage":"https://github.com/psecio/canary.git",
-    "license":"MiT",
+    "license":"MIT",
     "authors":[
         {
             "name":"Chris Cornutt",
             "email":"ccornutt@phpdeveloper.org"
         }
     ],
-    "require":{
-        "vlucas/phpdotenv": "^2.4",
-    },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
+    },
+    "suggest": {
+        "monolog/monolog": "Allows for teh creation of Monolog-based notifiers"
     },
     "autoload": {
         "psr-4": {
