--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "phpunit/phpunit": "^7.0"
     },
     "suggest": {
-        "monolog/monolog": "Allows for teh creation of Monolog-based notifiers"
+        "monolog/monolog": "Allows for the creation of Monolog-based notifiers",
+        "maknz/slack": "Allows for the creation of a Slack notifier (sends to a channel)"
     },
     "autoload": {
         "psr-4": {
