--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: php
+before_script:
+  - wget http://getcomposer.org/composer.phar
+  - php composer.phar install --dev
 php:
     - 7.0
 sudo: false
